samples/_failures_safe/1761468061_3af004_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_52298f54.c: In function ‘main’:
./samples/SAFE/__tmp_52298f54.c:126:20: error: missing terminating " character
  126 |             printf("Invalid input. Exiting
      |                    ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_52298f54.c:126:13: error: expected expression at end of input
  126 |             printf("Invalid input. Exiting
      |             ^~~~~~
./samples/SAFE/__tmp_52298f54.c:126:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_52298f54.c:126:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_52298f54.c:126:13: error: expected declaration or statement at end of input
